# Lacan-NTSport

./: .env  .gitignore  Instructions.md  LICENSE.md  NT_to_discord.json  Procfile  README.md  checkvotes.py  command_template.txt  compsmongo.py  config.json  dailyupdate.txt  data.csv  index.js  keep_alive.py  main.py  model.h5  mongoclient.py  nitrotype.py  pointsdb.json  profanity.txt  pyproject.toml  requirements.txt  test.html  text.txt  tickets.json  usedids  weeklyupdate.txt
.github/: FUNDING.yml
commands/Competitions/: competition.py  endcomp.py  leaderboard.py
commands/Economy/: badges.txt  bal.py  buy.py  cars.py  daily.py  equip.py  gamble.py  give.py  guess.py  h.py  h.txt  hang.py  hangextreme.txt  hanghard.txt  hangman.py  hourly.py  hw.txt  noobguess.py  profile.txt  rich.txt  shop.py  typerace.py  variables_ignore.txt  withdraw.py
commands/Premium/: april.txt  buypremium.py  donated.txt  donators.txt  premium.py  purcchase.txt  purchase.py  update.py  update.txt
commands/dev/: add.py  addpremium.py  addtickets.py  ban.txt  blacklist.txt  colours.txt  confirm.py  db_update.py  delroles.py  devregister.py  devunregister.py  devupdate.py  dm.py  donor.py  draw.py  kotrroles.py  leave.py  numroles.py  otherroles.py  remove.py  removepremium.py  removetickets.py  (+15 more)
cooldowns/: checkbot.py  guess.py  hangman.py  message.py  value.py  withdraw.py
events/: command_error.py  events_template.txt  guild_join.py  member_join.py  message.py  raw_reaction_add.py  raw_reaction_remove.py
garageScript/: garageScript.py  requests_html.py
variables/: lacanlog.py
(+75 files in other folders)
